# todoist-scheduler

./: .gitignore  AGENTS.md  README.md  com.user.todoist-notifier.plist  main.js  main.py  package.json  playwright.config.js  preload.cjs  pyproject.toml  reschedule_priority3_recurring.py  restore_recurrence.py  tailwind.config.js  task_analytics.py  task_notifier.py  task_overlay.py  todoist_api_exposed_data.py  update_notifier.sh
.github/workflows/: build.yml
electron/: README.md  main.js  package.json  preload.cjs  vite.config.js
electron/renderer/: index.html
electron/renderer/src/: app.jsx  bridge.js
legacy/: AGENTS.md  README.md  com.user.todoist-notifier.plist  pyproject.toml
legacy/src/: analytics.py  overlay_state.py
legacy/src/core/: env.py
legacy/src/notifier/: cache.py
legacy/src/scheduler/: constants.py
renderer/: index.html
renderer/src/: app.jsx  bridge.js  styles.css
renderer/src/components/: DaemonConfig.jsx  DurationModal.jsx  Home.jsx  LifeBlocks.jsx  NextTaskPopup.jsx  Overlay.jsx  PostponeModal.jsx  QuickStart.jsx  SchedulerControl.jsx  TaskQueue.jsx  Tasks.jsx  TimerCompleteModal.jsx  (+1 more)
scripts/: dev-electron.mjs  setup.sh  update.sh
src/: cli_notifier.py  cli_scheduler.py  life_blocks.py
src/core/: paths.py
src/integrations/: openrouter.py
src/notifier/: __init__.py  classifier.py  notifier.py
src/scheduler/: duration.py  scheduler.py
src/todoist_scheduler/: __init__.py  analytics.py  cli_notifier.py  cli_scheduler.py  overlay_state.py
src/ui/: __init__.py  blocks.py  overlay.py
tests/e2e/: app.spec.js
(+27 files in other folders)
